# ProofSci-Main

./: index.html
proofsci/: .env  Cargo.toml  database.db
proofsci/Keplr/: keplr.js
proofsci/createform/: form.css  form.js
proofsci/login/: login.css
proofsci/marketfile/css/: style.css
proofsci/profileElement/: featured.css  style.css
proofsci/src/: apps.rs  avatar.rs  create.rs  login.rs  main.rs  market.rs  profile.rs  signin.rs
proofsci/templates/: create.html  index.html  login.html  market.html  profile.html  signin.html  updateprofile.html
proofsci/wp-content/plugins/elementor-pro/assets/css/: frontend-lite.min.css  widget-nav-menu.min.css
proofsci/wp-content/plugins/elementor-pro/assets/js/: elements-handlers.min.js  frontend.min.js  nav-menu.bb5cce0a50480cdf695d.bundle.min.js  webpack-pro.runtime.min.js
proofsci/wp-content/plugins/elementor-pro/assets/lib/smartmenus/: jquery.smartmenus.min.js
proofsci/wp-content/plugins/elementor/assets/css/: frontend-lite.min.css
proofsci/wp-content/plugins/elementor/assets/js/: frontend-modules.min.js  frontend.min.js
proofsci/wp-content/plugins/translatepress-multilingual/assets/css/: trp-language-switcher.css
proofsci/wp-content/uploads/elementor/css/: global.css  post-2635.css  post-3025.css  post-3039.css  post-39.css
proofsci/wp-includes/css/: classic-themes.min.css
wp-content/plugins/elementor/assets/css/: widget-icon-box.min.css
wp-content/themes/hello-elementor/: style.min.css  theme.min.css
wp-content/uploads/elementor/css/: post-3057.css  post-36.css  post-64.css
(+4 files in other folders)
